--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,13 +1,76 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
+  width: 100%;
+  padding: 2rem;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
+}
+
+.input-filled {
+  position: relative;
+  font-size: 14px;
+  padding-top: 20px;
+}
+.input-filled input {
+  margin-bottom: 20px;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: #f2f2f2;
+  padding: 12px;
+  border-radius: 3px;
+  width: 90%;
+  outline: none;
+}
+
+.input-filled span {
+  position: absolute;
+  left: 12px;
+  cursor: text;
+  top: calc(50% + 10px);
+  transform: translateY(-50%);
+  color: #aaa;
+  transition: all 0.2s ease;
+}
+.input-filled input:valid + span,
+.input-filled input:focus + span {
+  top: 8px;
+  font-size: 10px;
+  color: #222;
+}
+
+.button-main{
+  padding: 10px 15px;
+  border-radius: 4px;
+  border-width: 0;
+  color: #f2f2f2;
+  background: rgb(77, 110, 218);
+  font-size: 16px;
+  transition: 0.2s all;
+}
+.button-main:hover{
+  cursor: pointer;
+  transform: scale(104%);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
 }
